1.2.1
=======
- The 'help' command has been added to give either the global help or help on
  a specific command (help [command]).
- The option 'help_docs' was added to print __main__.__doc__ on help messages.
  It defaults to True.
- The option main has been added to SetOptions and command() to set a command
  to get run when no command is supplied. Default is help.
- The option 'ignore_self' can now be passed in command() to override the global
  value on a per function basis.

1.2.0
========
- Support @command() decorator with no name argument, which will fall back to 
  the function's name.
- Use the capitalized letter for the second instance of a single letter flag.
- Use the first line of the docstring when listing all available commands.
- Add 'ignore_self' option, which will ignore functions arguments named 'self'.
- Add RunFunction() method to invoke a single explicit function, instead of
  name dispatched commands.

1.1.0
========
- issue#5: fix type casting for positional arguments
- issue#4: Add support for converting underscores to hyphens in parameter
  names. Enabled by default.
- Add support for decorator 'stacks'
